# YuioLink

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: content.rs  crypto.rs  lib.rs  link.rs  words.rs  words.txt
deploy/: .gitignore  droplet-user-data.bash  yuiolink-backup.bash  yuiolink-backup.service  yuiolink-backup.timer  yuiolink-update.bash  yuiolink-update.service  yuiolink-update.timer
design/: background-use-examples.html  controls-redesign.html  expiry-slider.html  hero-blues-and-history.html  history-directions.html  history-list.html  history-name-variants.html  history-shortlist.html  history-twoline.html  kind-and-time.html  namespace-two-type.html  preview-and-cards.html  public-amber-picker.html  public-warning-styles.html  result-directions.html  storage-toggle-mockups.html  terminal-log-history.html  toggle-colors.html  type-colors.html  wordlist-soundalikes.html
design/previews/: current.html
docs/: NAMESPACES.md  PREVIEW.md  ROUTES.md
server/: Cargo.toml  openapi.yaml
server/assets/fonts/: LICENSE.txt
server/migrations/: 0001_init.sql  0002_delete_token.sql  0003_withdrawn.sql  0004_words.sql
server/src/: card.rs  config.rs  db.rs  error.rs  main.rs  ratelimit.rs  token.rs  urlview.rs  views.rs  web.rs
server/static/: app.css  app.js  crypto.js  redirect.js  text.js
templates/: index.tmpl  layout.tmpl  paste.tmpl  show-paste.tmpl
tools/: .excluded-final-extra.txt  .excluded-paste-2.txt  .excluded-paste.txt  analyze2.js  band-check.js  build-curate-data.js  diff-kept.js  finalize-list.js  namespace-playground.html  scan-remaining.js  wordlist-curator.html  yuiolink-curated.txt  yuiolink-excluded.txt  yuiolink-union-le6.txt  yuiolink-union-le7.txt  yuiolink-union.txt
