[workspace]
resolver = "3"
members = [
    "core",
    "server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["jooize"]

[workspace.dependencies]
# Crypto (client-side end-to-end encryption)
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }

# URL parsing / scheme validation
url = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors / logging
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Server
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
maud = "0.26"
anyhow = "1"
