[package]
name = "yuiolink-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "yuiolink_core"
# lib: for the Rust server + CLI; staticlib/cdylib: for the FFI bridge to Swift.
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
aes-gcm.workspace = true
rand.workspace = true
base64.workspace = true
zeroize.workspace = true
url.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
