[package]
name = "yuiolink-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "yuiolink-server"
path = "src/main.rs"

[dependencies]
yuiolink-core = { path = "../core" }

tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
sqlx.workspace = true
maud.workspace = true
serde = { workspace = true }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
