[package]
name = "yuiolink-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "yuiolink-server"
path = "src/main.rs"

[dependencies]
yuiolink-core = { path = "../core" }

tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
sqlx.workspace = true
maud.workspace = true
serde = { workspace = true }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Link preview / interstitial
url.workspace = true
idna.workspace = true
unicode-security.workspace = true
psl.workspace = true

# Reveal-token signing + per-process secret
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true

# Share-card image (og:image) — enabled in the card-rendering step.
# resvg.workspace = true

[dev-dependencies]
# In-process HTTP testing of the axum router (oneshot + body collection).
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
